Fix overflowing program description content

--- a/src/players/default/scss/_base.scss
+++ b/src/players/default/scss/_base.scss
@@ -466,8 +466,12 @@ img {
 }
 
 .program-description {
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
     hyphens: auto;
+    -webkit-line-clamp: 3;
     margin: 0;
+    overflow: hidden;
     position: relative;
 
     &::after {
